--- a/Tasks (1).json
+++ b/Tasks (1).json
@@ -4,7 +4,7 @@
   "T Start Date": "11\/9\/2020 3:04 PM",
   "Title": "Sims access for requestor",
   "Type": "Unspecified",
-  "Current Analyst": "Sarah Rowell",
+  "Current Analyst": "Sarah Roswell",
   "Current Group": "Business Support",
   "Assigned Group": "Business Support",
   "Last Action Date": "9\/27\/2021 6:05 PM",
